<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />
        
    <item
        android:id="@+id/action_reload"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/reload"
        app:showAsAction="never" />
        
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings"
        app:showAsAction="never" />
        
    <item
        android:id="@+id/action_updates"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/updates_history"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/about"
        app:showAsAction="never" />
        
    <item
        android:id="@+id/action_exit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/exit_title"
        app:showAsAction="never" />

</menu>